tests/auto/webchannel/tst_webchannel.cpp
@@ -370,6 +370,12 @@ void TestWebChannel::testInfoForObject()
         }
         {
             QJsonArray method;
+            method.append(QStringLiteral("setProp"));
+            method.append(obj.metaObject()->indexOfMethod("setProp(QString)"));
+            expected.append(method);
+        }
+        {
+            QJsonArray method;
             method.append(QStringLiteral("method1"));
             method.append(obj.metaObject()->indexOfMethod("method1()"));
             expected.append(method);
@@ -476,6 +482,19 @@ void TestWebChannel::testInfoForObject()
                 property.append(signal);
             }
             property.append(QJsonValue::fromVariant(QVariant::fromValue(obj.returnedObject())));
+            expected.append(property);
+        }
+        {
+            QJsonArray property;
+            property.append(obj.metaObject()->indexOfProperty("prop"));
+            property.append(QStringLiteral("prop"));
+            {
+                QJsonArray signal;
+                signal.append(1);
+                signal.append(obj.metaObject()->indexOfMethod("propChanged(QString)"));
+                property.append(signal);
+            }
+            property.append(QJsonValue::fromVariant(QVariant::fromValue(obj.prop())));
             expected.append(property);
         }
         QCOMPARE(info["properties"].toArray(), expected);
@@ -697,6 +716,32 @@ void TestWebChannel::testInfiniteRecursion()
     channel.d_func()->publisher->initializeClient(m_dummyTransport);
 
     QJsonObject objectInfo = channel.d_func()->publisher->wrapResult(QVariant::fromValue(&obj), m_dummyTransport).toObject();
+}
+
+void TestWebChannel::testAsyncObject()
+{
+    QWebChannel channel;
+    channel.connectTo(m_dummyTransport);
+
+    QThread thread;
+    thread.start();
+
+    TestObject obj;
+    obj.moveToThread(&thread);
+
+    QJsonArray args;
+    args.append(QJsonValue("message"));
+
+    int method = obj.metaObject()->indexOfMethod("setProp(QString)");
+    QVERIFY(method != -1);
+
+    QSignalSpy spy(&obj, &TestObject::propChanged);
+    channel.d_func()->publisher->invokeMethod(&obj, method, args);
+    QVERIFY(spy.wait());
+    QCOMPARE(spy.at(0).at(0).toString(), args.at(0).toString());
+
+    thread.quit();
+    thread.wait();
 }
 
 static QHash<QString, QObject*> createObjects(QObject *parent)
